Fix japan flag visibility and add career path english trad

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,6 +88,13 @@ ol, ul {
   list-style-type: none;
 }
 
+.japan__flag path {
+  filter: drop-shadow(16px 16px 32px rgba(0, 0, 0, 1));
+}
+
+.japan__flag {
+  overflow: visible;
+}
 
 
 @layer base {
